--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,17 +33,17 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
-      - name: West Build (Reviung41)
-        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=reviung41 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: Reviung41 DTS File
+      - name: West Build (Boardsource 5x12)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=boardsource5x12 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Boardsource 5x12 DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
-      - name: Reviung41 Kconfig file
+      - name: Boardsource 5x12 Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 reviung41_nice_nano_v2.uf2
-      - name: Archive (Reviung41)
+        run: cp build/zephyr/zmk.uf2 boardsource5x12_nice_nano_v2.uf2
+      - name: Archive (Boardsource 5x12)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: reviung41_nice_nano_v2.uf2
+          path: boardsource5x12_nice_nano_v2.uf2
